force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/cgc_sync__Sync_Feature_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Lists the features available on the backend.</description>
    <label>Sync Feature Setting</label>
    <pluralLabel>Sync Feature Settings</pluralLabel>
</CustomObject>