force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__Always_Enabled_For_New_Installations__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Always_Enabled_For_New_Installations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provides a mechanism to make new and enhanced Sync Management features available to users who have newly installed CG Cloud Sync Management.</description>
    <inlineHelpText>Set to true to make the feature available to users of the newly installed CG Cloud Sync Management. Default is false.</inlineHelpText>
    <label>Always Enabled For New Installations</label>
    <type>Checkbox</type>
</CustomField>