force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__Client_Must_Support__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Client_Must_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled the client must support this feature, otherwise a the client software must be updated</description>
    <inlineHelpText>Enable this option to force the client software to be updated if this feature is not supported by the client</inlineHelpText>
    <label>Client Must Support</label>
    <type>Checkbox</type>
</CustomField>