force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__Client_Visibility__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Client_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabled if the feature details are to be sent to the client</description>
    <inlineHelpText>Enable this option to send the feature to the client application</inlineHelpText>
    <label>Client Visibility</label>
    <type>Checkbox</type>
</CustomField>