force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__Description__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Description__c</fullName>
    <description>Short Description to define how works the related feature setting</description>
    <inlineHelpText>Short Description to define how works the related feature setting. It will be visible in the Feature Settings UI page in case the setting is visible</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>