force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__Enabled_By_User_Group__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Enabled_By_User_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls the availability of a feature to  the users specified in the Feature Setting tab.</description>
    <inlineHelpText>Controls the availability of a feature to the users specified in the Feature Setting tab. Default is false.</inlineHelpText>
    <label>Enabled By User Group</label>
    <type>Checkbox</type>
</CustomField>