force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__Forced_Enabled_By_System__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Forced_Enabled_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls the activation of the Feature Settings page by overriding existing or default configurations.</description>
    <inlineHelpText>Controls the activation of the Feature Settings page by overriding existing or default configurations. Default is false.</inlineHelpText>
    <label>Forced Enabled By System</label>
    <type>Checkbox</type>
</CustomField>