force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Id__c</fullName>
    <description>Unique name to describe the feature that the client can use to check which feature is available</description>
    <inlineHelpText>Upper case unique Id that is used by the client to determine if a feature is available or not: e.g. ADVANCED_DEBUG_LOGGING</inlineHelpText>
    <label>Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>