force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__JSON_Settings__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__JSON_Settings__c</fullName>
    <description>JSON customization settings</description>
    <inlineHelpText>JSON settings that can be used with the feature: e.g. 
{
 &quot;digits&quot;: 4
}</inlineHelpText>
    <label>JSON Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>