force-app/main/default/objects/cgc_sync__Sync_Feature_Settings__mdt/fields/cgc_sync__UI_Visible__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__UI_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets the visibility of the Feature Settings page on the Sync Configurator UI.</description>
    <inlineHelpText>Sets the visibility of the Feature Settings tab on the Sync Configurator UI. Default is false. Set to true to show the Feature Settings page.</inlineHelpText>
    <label>UI Visible</label>
    <type>Checkbox</type>
</CustomField>